--- a/talk/example/index.html
+++ b/talk/example/index.html
@@ -929,7 +929,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="../../">Pablo Bernabeu</a></h5>
       <h6 class="card-subtitle">PhD student and graduate teaching assistant in Psychology</h6>
-      <p class="card-text">After doing a research master&rsquo;s in Psycholinguistics, I&rsquo;m now a PhD student and graduate teaching assistant in Cognitive Psychology. I&rsquo;m investigating how conceptual processing is supported by linguistic and sensorimotor brain systems. I use methods such as behavioural and electroencephalographic experiments, corpus analysis, statistics, and programming. My <a href="https://osf.io/84ktq/download">CV is available for download</a>.</p>
+      <p class="card-text">After doing a research master&rsquo;s in Psycholinguistics, I&rsquo;m now a PhD student and graduate teaching assistant in Cognitive Psychology. I&rsquo;m investigating how conceptual processing is supported by linguistic and sensorimotor brain systems. I use methods such as behavioural and electroencephalographic experiments, corpus analysis, statistics and programming. My <a href="https://osf.io/84ktq/download">CV is available for download</a>.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
