--- a/index.html
+++ b/index.html
@@ -3911,53 +3911,53 @@
 <td>Talk</td>
 <td>To follow</td>
 <td>
-<a href="https://newcastle2020.satrdays.org/" target="_blank" rel="noopener"><em>Open Data and Reproducibility v2.0</em></a>.</td>
+<a href="https://newcastle2020.satrdays.org/" target="_blank" rel="noopener">Open Data and Reproducibility v2.0</a>.</td>
 <td>SatRday, Newcastle University.</td>
 </tr>
 <tr>
 <td>Talk</td>
 <td>Apr 2020</td>
 <td>
-<a href="https://www.software.ac.uk/cw20" target="_blank" rel="noopener"><em>Embedding open research and reproducibility in the UG and PGT curricula</em></a>. With Phil McAleer and Andrew Stewart.</td>
-<td>SSI Collaborations Workshop.</td>
+<a href="https://www.software.ac.uk/cw20" target="_blank" rel="noopener">Embedding open research and reproducibility in the UG and PGT curricula</a>. With Phil McAleer and Andrew Stewart.</td>
+<td>Collaborations Workshop, Software Sustainability Institute.</td>
 </tr>
 <tr>
 <td>Talk</td>
 <td>Dec 2018</td>
 <td>
-<a href="https://www.slideshare.net/PabloBernabeu/presenting-data-interactively-online-using-r-shiny-126064157" target="_blank" rel="noopener"><em>Presenting data interactively online using R Shiny</em></a>.</td>
+<a href="https://www.slideshare.net/PabloBernabeu/presenting-data-interactively-online-using-r-shiny-126064157" target="_blank" rel="noopener">Presenting data interactively online using R Shiny</a>.</td>
 <td>Research Software Forum, Lancaster University.</td>
 </tr>
 <tr>
 <td>Poster</td>
 <td>Jan 2017 x2, Apr 2017, July 2017, Nov 2017</td>
 <td>
-<a href="https://www.researchgate.net/publication/318542811_Poster_Modality_switch_effects_emerge_early_and_increase_throughout_conceptual_processing_Evidence_from_ERPs" target="_blank" rel="noopener"><em>Modality switch effects emerge early and increase throughout conceptual processing: Evidence from ERPs</em></a>.</td>
-<td>(1) Event representations in episodic and semantic memory, U. York;  (2) Netherlands Graduate School of Linguistics, Radboud U.; (3) Juniorendag, Utrecht U.; (4) 39th Annual Conference of the Cognitive Science Society, London; (5) 58th Annual Meeting of the Psychonomic Society, Vancouver.</td>
+<a href="https://www.researchgate.net/publication/318542811_Poster_Modality_switch_effects_emerge_early_and_increase_throughout_conceptual_processing_Evidence_from_ERPs" target="_blank" rel="noopener">Modality switch effects emerge early and increase throughout conceptual processing: Evidence from ERPs</a>.</td>
+<td>(1) Event representations in episodic and semantic memory, U. York; <br> (2) Netherlands Graduate School of Linguistics, Radboud U.; <br> (3) Juniorendag, Utrecht U.; <br> (4) 39th Annual Conference of the Cognitive Science Society, London; <br> (5) 58th Annual Meeting of the Psychonomic Society, Vancouver.</td>
 </tr>
 <tr>
 <td>Poster</td>
 <td>June 2016</td>
-<td><em>Conceptual processing at different speeds: probing linguistic and embodied systems.</em></td>
+<td>Conceptual processing at different speeds: probing linguistic and embodied systems.</td>
 <td>Synapsium, Radboud University.</td>
 </tr>
 <tr>
 <td>Poster</td>
 <td>May 2016</td>
-<td><em>Norming study of modality exclusivity in Dutch, and an ongoing EEG study of linguistic and embodied conceptual processing.</em></td>
+<td>Norming study of modality exclusivity in Dutch, and an ongoing EEG study of linguistic and embodied conceptual processing.</td>
 <td>Psycholinguistics in Flanders, University of Antwerp. Tilburg University travel scholarship.</td>
 </tr>
 <tr>
 <td>Talk</td>
 <td>June 2015</td>
 <td>
-<a href="https://www.researchgate.net/publication/278686035_New_reviews_and_insights_on_language_evolution_Slides" target="_blank" rel="noopener"><em>New reviews and insights on language evolution</em></a>.</td>
+<a href="https://www.researchgate.net/publication/278686035_New_reviews_and_insights_on_language_evolution_Slides" target="_blank" rel="noopener">New reviews and insights on language evolution</a>.</td>
 <td>Tenth Language at the University of Essex (LangUE) Conference, University of Essex.</td>
 </tr>
 <tr>
 <td>Talk</td>
 <td>Feb, May 2015</td>
-<td><em>Shallow and deep conceptual representation: an ERP design.</em></td>
+<td>Shallow and deep conceptual representation: an ERP design.</td>
 <td>Theme Meetings, Radboud U.; Neurobiology of Language Lab meeting, MPI Psycholinguistics.</td>
 </tr>
 </tbody>
