--- a/data-dashboards/bernabeu-etal-2017-modalitynorms/index.html
+++ b/data-dashboards/bernabeu-etal-2017-modalitynorms/index.html
@@ -992,7 +992,9 @@ Shiny app: <a href="https://pablobernabeu.shinyapps.io/dutch-modality-exclusivit
 Repo: <a href="https://github.com/pablobernabeu/Modality-exclusivity-norms-Bernabeu-et-al/tree/master/Shiny-app">https://github.com/pablobernabeu/Modality-exclusivity-norms-Bernabeu-et-al/tree/master/Shiny-app</a>
 RStudio Cloud: <a href="https://rstudio.cloud/project/941860">https://rstudio.cloud/project/941860</a></p>
 <h3 id="reference">Reference</h3>
+<div style = "text-indent:-2em; margin-left:2em;">
 <p>Bernabeu, P., Willems, R. M., &amp; Louwerse, M. M. (2017). Modality switch effects emerge early and increase throughout conceptual processing: Evidence from ERPs [Data dashboard for modality exclusivity norms]. Retrieved from <a href="https://pablobernabeu.shinyapps.io/ERP-waveform-visualization_CMS-experiment/">https://pablobernabeu.shinyapps.io/ERP-waveform-visualization_CMS-experiment/</a>.</p>
+</div>
 
     </div>
 
