--- a/data-dashboards/butterfly-species-richness-in-la/index.html
+++ b/data-dashboards/butterfly-species-richness-in-la/index.html
@@ -842,7 +842,9 @@ Column {style=&quot;data-width:100%; position:static; height:1000px;&quot;}
 
 </code></pre>
 <p>Reference</p>
+<div style = "text-indent:-2em; margin-left:2em;">
 <p>Bernabeu, P. (2020). Dashboard with data from Prudic, Oliver, Brown, &amp; Long (2018), Comparisons of Citizen Science Data-Gathering Approaches to Evaluate Urban Butterfly Diversity, <em>Insects</em>, <em>9</em>, 186. Retrieved from <a href="https://rpubs.com/pcbernabeu/Butterfly-species-richness-in-LA">https://rpubs.com/pcbernabeu/Butterfly-species-richness-in-LA</a>.</p>
+</div>
 
     </div>
 
