--- a/publication/bernabeu-etal-2017/index.html
+++ b/publication/bernabeu-etal-2017/index.html
@@ -904,7 +904,9 @@
     
 
     <div class="article-style"><h3 id="reference">Reference</h3>
+<div style = "text-indent:-2em; margin-left:2em;">
 <p>Bernabeu, P., Willems, R. M., &amp; Louwerse, M. M. (2017). Modality switch effects emerge early and increase throughout conceptual processing: Evidence from ERPs. In G. Gunzelmann, A. Howes, T. Tenbrink, &amp; E. J. Davelaar (Eds.), <em>Proceedings of the 39th Annual Conference of the Cognitive Science Society</em> (pp. 1629-1634). Austin, TX: Cognitive Science Society. <a href="https://mindmodeling.org/cogsci2017/papers/0318/">https://mindmodeling.org/cogsci2017/papers/0318/</a></p>
+</div>
 </div>
 
     
