--- a/publication/bernabeu_vogt2015/index.html
+++ b/publication/bernabeu_vogt2015/index.html
@@ -847,7 +847,9 @@
     
 
     <div class="article-style"><h3 id="reference">Reference</h3>
+<div style = "text-indent:-2em; margin-left:2em;">
 <p>Bernabeu, P., &amp; Vogt, P. (2015). Language evolution: current status and future directions. <em>Tenth Language at the University of Essex (LangUE) Postgraduate Conference</em>. <a href="https://researchgate.net/publication/280858062/">https://researchgate.net/publication/280858062/</a></p>
+</div>
 </div>
 
     
