--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -866,7 +866,9 @@
 </li>
 </ul>
 <h4 id="reference">Reference</h4>
+<div style = "text-indent:-2em; margin-left:2em;">
 <p>Chen, S., Szabelska, A., Chartier, C. R., Kekecs, Z., Lynott, D., Bernabeu, P., … Schmidt, K. (conditionally accepted). Investigating object orientation effects across 14 languages. <em>Psychonomic Bulletin and Review</em>. <a href="https://doi.org/10.31234/osf.io/t2pjv/">https://doi.org/10.31234/osf.io/t2pjv/</a></p>
+</div>
 </div>
 
     
