--- a/publication/bernabeu-tillman-2019/index.html
+++ b/publication/bernabeu-tillman-2019/index.html
@@ -845,7 +845,9 @@
     
 
     <div class="article-style"><h3 id="reference">Reference</h3>
+<div style = "text-indent:-2em; margin-left:2em;">
 <p>Bernabeu, P., &amp; Tillman, R. (2019). More refined typology and design in linguistic relativity: The case of motion event encoding. <em>Dutch Journal of Applied Linguistics</em>. <a href="http://doi.org/10.1075/dujal.15019.ber/">http://doi.org/10.1075/dujal.15019.ber/</a></p>
+</div>
 </div>
 
     
