--- a/data-dashboards/butterfly-species-richness-in-la/index.html
+++ b/data-dashboards/butterfly-species-richness-in-la/index.html
@@ -778,7 +778,7 @@
   
   <a class="btn btn-outline-primary my-1 mr-1" href="https://rpubs.com/pcbernabeu/Butterfly-species-richness-in-LA" target="_blank" rel="noopener">
     
-    Dashboard site
+    Dashboard
   </a>
 
 
@@ -800,8 +800,13 @@
   <div class="article-container">
 
     <div class="article-style">
-      <h3 id="link-to-dashboarddashboardsbutterfly-species-richness-in-ladhtml">
-<a href="../../dashboards/Butterfly-species-richness-in-LA/d.html">Link to dashboard</a></h3>
+      <a href='https://pablobernabeu.github.io/dashboards/Butterfly-species-richness-in-LA/d.html'>
+      <button style = "background-color: white; color: black; border: 2px solid #196F27; border-radius: 12px;">
+      <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
+      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Dashboard
+      </h3></button>
+      </a>
+<br>
 <br>
 <p>Dashboard with Open data</a> (<a href='https://github.com/jcoliver/bioscan/blob/master/data/iNaturalist-clean-reduced.csv' target="_blank">iNaturalist</a> and <a href='https://github.com/jcoliver/bioscan/blob/master/data/BioScanDataComplete.csv' target="_blank">BioScan</a>) from Prudic, K.L.; Oliver, J.C.; Brown, B.V.; Long, E.C. <a href='https://doi.org/10.3390/insects9040186' target="_blank"> <strong>Comparisons of Citizen Science Data-Gathering Approaches to Evaluate Urban Butterfly Diversity</strong>. <em>Insects</em> <strong>2018</strong>, <em>9</em>, 186</a>. Prudic and colleagues compared citizen science with traditional methods in the measurement of butterfly populations.</p>
 <p>I developed this dashboard independently, after reproducing the 
