--- a/publication/bernabeu-etal-2017/index.html
+++ b/publication/bernabeu-etal-2017/index.html
@@ -898,7 +898,7 @@
     <a href=https://psyarxiv.com/a5pcz/download>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      Read paper
+      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Paper
       </h3></button>
       </a>
     
