--- a/publication/bernabeu_vogt2015/index.html
+++ b/publication/bernabeu_vogt2015/index.html
@@ -841,7 +841,7 @@
     <a href=https://www.researchgate.net/profile/Pablo_Bernabeu3/publication/280858062_Language_evolution_Current_status_and_future_directions/links/59309ba2a6fdcc89e784596c/Language-evolution-Current-status-and-future-directions.pdf>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      Read paper
+      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Paper
       </h3></button>
       </a>
     
