--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -855,16 +855,12 @@
     <a href=https://psyarxiv.com/5gjvk/download>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      Read paper
+      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Paper
       </h3></button>
       </a>
     
 
-    <div class="article-style"><ul>
-<li>
-<h3 id="a-hrefhttpsosfioh36wrvideo-demonstration-of-the-procedure-followed-in-our-laba"><a href='https://osf.io/h36wr/'>Video demonstration of the procedure followed in our lab</a></h3>
-</li>
-</ul>
+    <div class="article-style"><h4 id="nbsp-i-classfas-fa-eyeinbsp-a-hrefhttpsosfioh36wrvideo-demonstration-of-the-procedure-followed-in-our-laba">  <i class="fas fa-eye"></i>  <a href='https://osf.io/h36wr/'>Video demonstration of the procedure followed in our lab</a></h4>
 <h4 id="reference">Reference</h4>
 <div style = "text-indent:-2em; margin-left:2em;">
 <p>Chen, S., Szabelska, A., Chartier, C. R., Kekecs, Z., Lynott, D., Bernabeu, P., … Schmidt, K. (conditionally accepted). Investigating object orientation effects across 14 languages. <em>Psychonomic Bulletin and Review</em>. <a href="https://doi.org/10.31234/osf.io/t2pjv/">https://doi.org/10.31234/osf.io/t2pjv/</a></p>
