--- a/project/external-project/index.html
+++ b/project/external-project/index.html
@@ -843,8 +843,8 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="../../">Pablo Bernabeu</a></h5>
-      <h6 class="card-subtitle">PhD student and graduate teaching assistant in Psychology</h6>
-      <p class="card-text">After doing a research master&rsquo;s in Psycholinguistics, I&rsquo;m now a PhD student and graduate teaching assistant in Cognitive Psychology. I&rsquo;m investigating how conceptual processing is supported by linguistic and sensorimotor brain systems. I use methods such as behavioural and electroencephalographic experiments, corpus analysis, statistics and programming.</p>
+      <h6 class="card-subtitle">Psychology PhD student and teaching assistant</h6>
+      <p class="card-text">After doing a research master&rsquo;s, I became a PhD student and graduate teaching assistant in Psychology. I&rsquo;m investigating how conceptual processing is supported by linguistic and sensorimotor brain systems. I use methods such as behavioural and electroencephalographic experiments, corpus analysis, statistics and programming.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
