--- a/data-dashboards/bernabeu-etal-2017-modalitynorms/index.html
+++ b/data-dashboards/bernabeu-etal-2017-modalitynorms/index.html
@@ -990,6 +990,10 @@ $(document).ready(function(){
   
   <a class="badge badge-light" href="../../tags/linguistics/">linguistics</a>
   
+  <a class="badge badge-light" href="../../tags/html/">HTML</a>
+  
+  <a class="badge badge-light" href="../../tags/css/">CSS</a>
+  
 </div>
 
 
