--- a/data-dashboards/bernabeu-etal-2017-modalityswitch/index.html
+++ b/data-dashboards/bernabeu-etal-2017-modalityswitch/index.html
@@ -926,6 +926,10 @@ downloadButton('downloadPlot.1', 'Download HD plot')
   
   <a class="badge badge-light" href="../../tags/psycholinguistics/">psycholinguistics</a>
   
+  <a class="badge badge-light" href="../../tags/html/">HTML</a>
+  
+  <a class="badge badge-light" href="../../tags/css/">CSS</a>
+  
 </div>
 
 
