--- a/data-dashboards/butterfly-species-richness-in-la/index.html
+++ b/data-dashboards/butterfly-species-richness-in-la/index.html
@@ -776,7 +776,7 @@ BioScan = BioScan %&gt;% pivot_longer(
 </code></pre>
 <br>
 <p>merging three data sets,</p>
-<pre><code># The iNaturalist data set presents a challenge slightly different from the pseudovariables found above.
+<pre><code># The iNaturalist data set presents a slightly different challenge from the pseudovariables found above.
 # The number of animals of each species must be computed from repeated entries, per site.
 
 iNaturalist = merge(iNaturalist, iNaturalist %&gt;% count(species, site, name = 'Number'))
