--- a/index.html
+++ b/index.html
@@ -1921,7 +1921,7 @@
             <div class="description" style="padding-left:14px;">
               <p class="course" style="color:#515151"><a href="https://www.lancaster.ac.uk/psychology/">Teaching assistantship for 180 hours per year throughout PhD</a>, 2018-2022</p>
               <p class="institution" style="color:#5B5B5B">Lancaster University Department of Psychology</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Seminars, labs, marking, representation of teaching assistants. BSc courses: Psychology 101 (seminars), Cognitive psychology (seminars and essay marking). MSc courses: Statistics (labs).</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Various duties amounting to 180 hours per year. BSc courses: Psychology 101 (seminars and essay marking), Analysis (labs), Cognitive psychology (seminars and essay marking). MSc courses: Statistics (labs).</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
@@ -2108,9 +2108,9 @@
 <tr>
 <td>2020</td>
 <td>
-<a href="https://replicats.research.unimelb.edu.au" target="_blank" rel="noopener">RepliCATS Grant</a></td>
+<a href="https://replicats.research.unimelb.edu.au" target="_blank" rel="noopener">RepliCATS Grant</a>, U Melbourne</td>
 <td>Grant for completing 20 
-<a href="https://replicats.research.unimelb.edu.au" target="_blank" rel="noopener">RepliCATS research assessments</a>. U Melbourne</td>
+<a href="https://replicats.research.unimelb.edu.au" target="_blank" rel="noopener">RepliCATS research assessments</a></td>
 </tr>
 <tr>
 <td>2020</td>
