--- a/index.html
+++ b/index.html
@@ -810,6 +810,19 @@
 
   
   
+  
+  
+  <div>
+    
+
+
+
+  
+  <span>Multiple authors</span>
+
+  </div>
+  
+  
 
   
   <span class="article-date">
@@ -889,6 +902,19 @@
 
 <div class="article-metadata">
 
+  
+  
+  
+  
+  <div>
+    
+
+
+
+  
+  <span>Multiple authors</span>
+
+  </div>
   
   
 
