--- a/index.html
+++ b/index.html
@@ -2101,7 +2101,7 @@
           
         </ul>
 
-        <h3 style="padding-left:13px;">Teaching experience and qualifications</h3>
+        <h3 style="padding-left:13px;">Teaching</h3>
         <ul class="ul-edu fa-ul">
           
           <li>
@@ -2120,7 +2120,7 @@
           <li>
             <i class="fa-li fas fa-chalkboard-teacher fa-sm" style="padding-left:17px;"></i>
             <div class="description" style="padding-left:14px;">
-              <p class="course" style="color:#515151"><a href="https://carpentries.github.io/instructor-training/">Carpentries Instructor certification</a>, 2020 (expected)</p>
+              <p class="course" style="color:#515151"><a href="https://carpentries.org/become-instructor/">Carpentries Instructor certification</a>, Expected 2020</p>
               <p class="institution" style="color:#5B5B5B">The Carpentries</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
