--- a/index.html
+++ b/index.html
@@ -2206,9 +2206,10 @@
 </tr>
 <tr>
 <td><strong>R programming</strong></td>
-<td>R Markdown reports; online data dashboards with Shiny, Flexdashboard, Plotly; Binder environments (e.g., 
+<td>R Markdown; online data dashboards with Shiny, Flexdashboard, Plotly; Binder environments (e.g., 
 <a href="https://osf.io/brkjw/" target="_blank" rel="noopener"><i class="fas fa-link"></i></a>); mining, preprocessing, analysis of Big Data (language corpora, news and social media, through API or web scraping); statistics; visualisation; Natural Language Processing (regular expressions, word frequency and sentiment analysis, topic modelling; e.g., 
-<a href="https://osf.io/k4ycz/" target="_blank" rel="noopener"><i class="fas fa-link"></i></a>)</td>
+<a href="./2016/the-louisiana-minnesota-dallas-crisis-across-media-and-time-a-big-data-exercise/"><i class="fas fa-link"></i></a>); Tidyverse (e.g., 
+<a href="https://github.com/pablobernabeu/Experiment-simulation-app" target="_blank" rel="noopener"><i class="fas fa-link"></i></a>)</td>
 </tr>
 <tr>
 <td><strong>Data management</strong></td>
@@ -4161,9 +4162,9 @@
 <a href="https://www.software.ac.uk/programmes-and-events/fellowship-programme" target="_blank" rel="noopener">SSI Fellowship</a></td>
 </tr>
 <tr>
-<td align="center">27 July 2020</td>
+<td align="center">July 2020</td>
 <td>
-<a href="https://www.ukclc2020.com/pre-conference" target="_blank" rel="noopener">Open data and reproducibility 2.0</a></td>
+<a href="https://www.ukclc2020.com/pre-conference" target="_blank" rel="noopener">Open data and reproducibility</a></td>
 <td>
 <a href="https://www.ukclc2020.com/" target="_blank" rel="noopener">UK Cognitive Linguistics Conference</a>, University of Birmingham</td>
 <td align="center">
@@ -4197,6 +4198,15 @@
 <td>
 <a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">N8 CIR</a>, <br> 
 <a href="https://www.software.ac.uk/programmes-and-events/fellowship-programme" target="_blank" rel="noopener">SSI Fellowship</a></td>
+</tr>
+<tr>
+<td align="center">May 2020</td>
+<td>
+<a href="https://github.com/pablobernabeu/Data-is-present/blob/master/N8-CIR-workshops.md/" target="_blank" rel="noopener">R Markdown</a></td>
+<td>Lancaster University</td>
+<td align="center"></td>
+<td></td>
+<td></td>
 </tr>
 </tbody>
 </table>
