--- a/publication/bernabeu-etal-2017/index.html
+++ b/publication/bernabeu-etal-2017/index.html
@@ -816,9 +816,9 @@
   
     
   
-  <a class="btn btn-outline-primary my-1 mr-1" href="https://psyarxiv.com/5gjvk/download" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1" href="https://psyarxiv.com/5gjvk/download/" target="_blank" rel="noopener">
     
-    Master's thesis
+    Download master's thesis
   </a>
 
 
