--- a/index.html
+++ b/index.html
@@ -2029,7 +2029,7 @@
               <p class="institution" style="color:#5B5B5B">Tilburg University and Radboud University</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Student member, Master’s curriculum and accreditation committee</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Tilburg U. Scholarship for Academic Excellence, 2014/2015</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  <a href="./publication/Bernabeu2017/">Thesis</a></p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  <a href="https://psyarxiv.com/5gjvk/download/">Download thesis</a></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Grade: 7.54 out of 10 (Distinction)</p>
               <p class="institution" style="max-width: 550px; padding-left:18px; text-indent:-0.8em; margin-left:1em;"></p>
             </div>
@@ -3237,9 +3237,9 @@
   
     
   
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://psyarxiv.com/5gjvk/download" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://psyarxiv.com/5gjvk/download/" target="_blank" rel="noopener">
     
-    Master's thesis
+    Download master's thesis
   </a>
 
 
