--- a/applications-and-dashboards/bernabeu-etal-2017-modalitynorms/index.html
+++ b/applications-and-dashboards/bernabeu-etal-2017-modalitynorms/index.html
@@ -943,7 +943,7 @@ $(document).ready(function(){
 </ul>
 <h2 id="non-shiny-version-published-on-rpubs">Non-Shiny version published on RPubs</h2>
 <p>A reduced, non-Shiny version was also created to increase the availability of the content. Removing some reactivity features allows the dashboard to be published as a standard, static website (i.e., on a personal website, on 
-<a href="rpubs.com">RPubs</a>, etc.), without the need for a back-end Shiny server. Note that this type of website is dubbed &lsquo;static&rsquo;, but it can retain multiple interactive features thanks to Javascript-based tools under the hood, as allowed by R packages such as <code>leaflet</code> for maps, <code>DT</code> for tables, <code>plotly</code> for plots, etc.</p>
+<a href="rpubs.com">RPubs</a>, etc.), without the need for a back-end Shiny server. Note that this type of website is dubbed &lsquo;static&rsquo;, but it can retain multiple interactive features thanks to Javascript-based tools under the hood, allowed by R packages such as <code>leaflet</code> for maps, <code>DT</code> for tables, <code>plotly</code> for plots, etc.</p>
 <p>To create the Flexdashboard-only version departing from the Flexdashboard-Shiny version, I added a setting in the header of the script</p>
 <pre><code>knit: (function(inputFile, encoding) {
   rmarkdown::render(inputFile, encoding = encoding) })
@@ -956,8 +956,9 @@ $(document).ready(function(){
 </code></pre>
 <h3 id="reference">Reference</h3>
 <div style = "text-indent:-2em; margin-left:2em;">
-<p>Bernabeu, P., Willems, R. M., &amp; Louwerse, M. M. (2017). Modality switch effects emerge early and increase throughout conceptual processing: Evidence from ERPs [Data dashboard for modality exclusivity norms]. Retrieved from <a href="https://pablobernabeu.shinyapps.io/ERP-waveform-visualization_CMS-experiment/">https://pablobernabeu.shinyapps.io/ERP-waveform-visualization_CMS-experiment/</a>.</p>
+<p>Bernabeu, P. (2018). Dutch modality exclusivity norms for 336 properties and 411 concepts [Data dashboard]. Retrieved from <a href="https://pablobernabeu.shinyapps.io/Dutch-Modality-Exclusivity-Norms/">https://pablobernabeu.shinyapps.io/Dutch-Modality-Exclusivity-Norms/</a>.</p>
 </div>
+<br>
 
     </div>
 
