--- a/applications-and-dashboards/experimental-data-simulation/index.html
+++ b/applications-and-dashboards/experimental-data-simulation/index.html
@@ -730,7 +730,7 @@
 <p>This web application is suitable for education or research purposes in experimental sciences. It allows the <strong>creation of varied data sets with specified elements, such as between-group or within-participant variables, that can be categorical or continuous.</strong> These features can be selected inside the different tabs. In the penultimate tab, a custom summary of the current data set can be constructed. In the last tab, the list of parameters and the data set can be downloaded.</p>
 <div id="reference" class="section level3">
 <h3>Reference</h3>
-<p>Bernabeu, P., &amp; Lynott, D. (2020). Web application for the simulation of experimental data (Version 0.2). <a href="https://github.com/pablobernabeu/Experiment-simulation-app/" target="_blank">https://github.com/pablobernabeu/Experiment-simulation-app/</a>.</p>
+<p>Bernabeu, P., &amp; Lynott, D. (2020). Web application for the simulation of experimental data (Version 0.2). Retrieved from <a href="https://github.com/pablobernabeu/Experiment-simulation-app/">https://github.com/pablobernabeu/Experiment-simulation-app/</a>.</p>
 </div>
 <div id="code" class="section level3">
 <h3>Code</h3>
