--- a/applications-and-dashboards/bernabeu-etal-2017-modalitynorms/index.html
+++ b/applications-and-dashboards/bernabeu-etal-2017-modalitynorms/index.html
@@ -806,14 +806,16 @@
       <a href='../../dashboards/Dutch-modality-exclusivity-norms/d.html'>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Flexdashboard </h3></button></a> &nbsp; 
+      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Reduced dashboard <font style='font-size:60%;'><i>Flexdashboard</i></font> </h3></button></a> &nbsp; 
+<br>
+<br>
 <a href='https://pablobernabeu.shinyapps.io/Dutch-modality-exclusivity-norms'>
       <button style = "background-color: white; color: black; border: 2px solid #196F27; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
-      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Flexdashboard-Shiny </h3></button></a>
+      <span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Complete dashboard <font style='font-size:60%;'><i>Flexdashboard-Shiny</i></font> </h3></button></a>
 <br>
 <br>
-<p>This Flexdashboard-Shiny app presents linguistic data over several tabs. The code combines the great front-end of Flexdashboard—based on R Markdown and yielding an unmatched user interface—, with the great back-end of Shiny—allowing users to download sections of data they select, in various formats.</p>
+<p>This web application presents linguistic data over several tabs. The code combines the great front-end of Flexdashboard—based on R Markdown and yielding an unmatched user interface—, with the great back-end of Shiny—allowing users to download sections of data they select, in various formats.</p>
 <ul>
 <li>
 <p>A cool, recent finding was the reactable package, which puts Javascript into the cells, allowing coloured bars, etc.</p>
