--- a/publication/index.html
+++ b/publication/index.html
@@ -872,7 +872,7 @@
 
   </span>
   (2017).
-  <a href="../publication/bernabeu-etal-2017/">Modality switch effects emerge early and increase throughout conceptual processing: evidence from ERPs [Paper]</a>.
+  <a href="../publication/bernabeu-etal-2017/">Modality switch effects emerge early and increase throughout conceptual processing: evidence from ERPs</a>.
   In G. Gunzelmann, A. Howes, T. Tenbrink, &amp; E. J. Davelaar (Eds.), <em>Proceedings of the 39th Annual Conference of the Cognitive Science Society</em> (pp. 1629-1634). Austin, TX: Cognitive Science Society..
   
   <p>
