--- a/applications-and-dashboards/index.html
+++ b/applications-and-dashboards/index.html
@@ -601,7 +601,7 @@
       <h2><a href="../applications-and-dashboards/experimental-data-simulation/" >Web application for the simulation of experimental data</a></h2>
       <div class="article-style">
         
-          This web application is suitable for education or research purposes in experimental sciences. It allows the creation of varied data sets with specified elements, such as between-group or within-participant variables, that can be categorical or …
+          This web application is suitable for educational or research purposes in experimental sciences. It allows the **creation of varied data sets with specified structures, such as between-group or within-participant variables, that can be categorical or …
         
       </div>
     </div>
