--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
 
     
     <div class="article-style">
-      This project offers free activities to learn and practise reproducible data presentation across the UK. Pablo Bernabeu organises these …
+      This project offers free activities to learn and practise reproducible data presentation. Pablo Bernabeu organises these events in the …
     </div>
     
 
@@ -3993,7 +3993,7 @@
   
     <div class="col-12 col-lg-4 section-heading">
       <h1>Workshops</h1>
-      <p>Introduction to R, statistics, visualisation, reproducible documents, data dashboards, HTML, CSS, web hosting (<a href="./2020/data-is-present-workshops-and-datathons/">further details</a>).</p>
+      <p>Introduction to R, statistics, visualisation, reproducible documents, web applications and dashboards, HTML, CSS, web hosting (<a href="./2020/data-is-present-workshops-and-datathons/">further details</a>).</p>
     </div>
     <div class="col-12 col-lg-8">
       <table>
@@ -4003,8 +4003,6 @@
 <th>Title</th>
 <th>Event and location</th>
 <th align="center">Registration</th>
-<th>Attendance funding</th>
-<th>Organisation funding</th>
 </tr>
 </thead>
 <tbody>
@@ -4016,81 +4014,47 @@
 <a href="http://wp.lancs.ac.uk/lcicd/programme/" target="_blank" rel="noopener">Lancaster Conference on Infant and Early Child Development</a>, Lancaster University</td>
 <td align="center">
 <a href="http://wp.lancs.ac.uk/lcicd/registration/" target="_blank" rel="noopener">Link</a></td>
-<td></td>
-<td></td>
 </tr>
 <tr>
 <td align="center">To follow</td>
 <td>
 <a href="https://github.com/pablobernabeu/Data-is-present/blob/master/N8-CIR-workshops.md/" target="_blank" rel="noopener">Data dashboards and Binder environments</a></td>
-<td>University of York</td>
+<td>[online]</td>
 <td align="center">
 <a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">Link</a></td>
-<td>
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">N8 CIR</a></td>
-<td>
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">N8 CIR</a>, <br> 
-<a href="https://www.software.ac.uk/programmes-and-events/fellowship-programme" target="_blank" rel="noopener">SSI Fellowship</a></td>
 </tr>
 <tr>
 <td align="center">To follow</td>
 <td>
 <a href="https://github.com/pablobernabeu/Data-is-present/blob/master/N8-CIR-workshops.md/" target="_blank" rel="noopener">Introduction to R and R Markdown</a></td>
-<td>Durham University</td>
+<td>[online]</td>
 <td align="center">
 <a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">Link</a></td>
-<td>
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">N8 CIR</a></td>
-<td>
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">N8 CIR</a>, <br> 
-<a href="https://www.software.ac.uk/programmes-and-events/fellowship-programme" target="_blank" rel="noopener">SSI Fellowship</a></td>
 </tr>
 <tr>
-<td align="center">July 2020</td>
+<td align="center">13 August 2020</td>
 <td>
-<a href="https://www.ukclc2020.com/pre-conference" target="_blank" rel="noopener">Open data and reproducibility</a></td>
+<a href="https://github.com/carpentrycon/carpentryconhome-proposals/issues/18#issuecomment-632729462" target="_blank" rel="noopener">Open data and reproducibility: R Markdown, data dashboards and Binder</a></td>
 <td>
-<a href="https://www.ukclc2020.com/" target="_blank" rel="noopener">UK Cognitive Linguistics Conference</a>, University of Birmingham</td>
+<a href="https://github.com/carpentrycon/carpentryconhome-proposals" target="_blank" rel="noopener">CarpentryCon</a>, The Carpentries	[online]</td>
+<td align="center">
+<a href="https://github.com/carpentrycon/carpentryconhome-proposals" target="_blank" rel="noopener">Link</a></td>
+</tr>
+<tr>
+<td align="center">26 July 2020</td>
+<td>
+<a href="https://www.ukclc2020.com/pre-conference" target="_blank" rel="noopener">Open data and reproducibility: R Markdown, data dashboards and Binder</a></td>
+<td>
+<a href="https://www.ukclc2020.com/" target="_blank" rel="noopener">UK Cognitive Linguistics Conference</a>, University of Birmingham	[online]</td>
 <td align="center">
 <a href="https://www.ukclc2020.com/registration" target="_blank" rel="noopener">Link</a></td>
-<td></td>
-<td>
-<a href="https://www.software.ac.uk/programmes-and-events/fellowship-programme" target="_blank" rel="noopener">SSI Fellowship</a></td>
 </tr>
 <tr>
-<td align="center">To follow</td>
-<td>
-<a href="https://github.com/pablobernabeu/Data-is-present/blob/master/N8-CIR-workshops.md" target="_blank" rel="noopener">Data dashboards and Binder environments</a></td>
-<td>University of Liverpool</td>
-<td align="center">
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">Link</a></td>
-<td>
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">N8 CIR</a></td>
-<td>
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">N8 CIR</a>, <br> 
-<a href="https://www.software.ac.uk/programmes-and-events/fellowship-programme" target="_blank" rel="noopener">SSI Fellowship</a></td>
-</tr>
-<tr>
-<td align="center">To follow</td>
-<td>
-<a href="https://github.com/pablobernabeu/Data-is-present/blob/master/N8-CIR-workshops.md/" target="_blank" rel="noopener">Introduction to R and R Markdown</a></td>
-<td>University of Manchester</td>
-<td align="center">
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">Link</a></td>
-<td>
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">N8 CIR</a></td>
-<td>
-<a href="https://n8cir.org.uk/events/" target="_blank" rel="noopener">N8 CIR</a>, <br> 
-<a href="https://www.software.ac.uk/programmes-and-events/fellowship-programme" target="_blank" rel="noopener">SSI Fellowship</a></td>
-</tr>
-<tr>
-<td align="center">May 2020</td>
+<td align="center">6 May 2020</td>
 <td>
 <a href="https://github.com/pablobernabeu/Data-is-present/blob/master/N8-CIR-workshops.md/" target="_blank" rel="noopener">R Markdown</a></td>
-<td>Lancaster University</td>
+<td>Lancaster University	[online]</td>
 <td align="center"></td>
-<td></td>
-<td></td>
 </tr>
 </tbody>
 </table>
