--- a/index.html
+++ b/index.html
@@ -2403,14 +2403,6 @@
 <td><strong>Course and remit</strong></td>
 </tr>
 <tr>
-<td align="center"><strong>2018–19</strong></td>
-<td>Understanding psychology (101) — Seminars and essay marking</td>
-</tr>
-<tr>
-<td align="center"></td>
-<td>Investigating psychology: Analysis (102) — Labs</td>
-</tr>
-<tr>
 <td align="center"><strong>2019–20</strong></td>
 <td>Understanding psychology (101) — Seminars and essay marking</td>
 </tr>
@@ -2421,6 +2413,14 @@
 <tr>
 <td align="center"></td>
 <td>Master's statistics (401) — Labs</td>
+</tr>
+<tr>
+<td align="center"><strong>2018–19</strong></td>
+<td>Understanding psychology (101) — Seminars and essay marking</td>
+</tr>
+<tr>
+<td align="center"></td>
+<td>Investigating psychology: Analysis (102) — Labs</td>
 </tr>
 </tbody>
 </table>
@@ -2755,7 +2755,7 @@
       
     </div>
     <div class="col-12 col-lg-8">
-      <h3 id="2020-workshop-on-r-markdown-dashboards-and-binder-brsee-programme-and-materialshttpsgithubcompablobernabeucarpentrycon-2020-workshop-open-data-reproducibility">[2020] Workshop on R Markdown, dashboards and Binder <br><a href="https://github.com/pablobernabeu/CarpentryCon-2020-workshop-Open-Data-Reproducibility">(see programme and materials)</a></h3>
+      <h3 id="2020-workshop-on-r-markdown-dashboards-and-binder-brsee-programme-and-materialshttpsgithubcompablobernabeucarpentrycon-2020-workshop-open-data-reproducibility">[2020] Workshop on R Markdown, dashboards and Binder <br>(see <a href="https://github.com/pablobernabeu/CarpentryCon-2020-workshop-Open-Data-Reproducibility">programme and materials</a>)</h3>
 <div style = "position: relative; margin-top: 20px; padding-top: 56.25%;">
   <iframe src="https://www.youtube-nocookie.com/embed/wZsPD7CgJC0" frameborder="0" allowfullscreen
     style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
