--- a/applications-and-dashboards/experimental-data-simulation/index.html
+++ b/applications-and-dashboards/experimental-data-simulation/index.html
@@ -679,7 +679,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/pablobernabeu/Experimental-data-simulation/blob/master/web-application.Rmd" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/pablobernabeu/Experimental-data-simulation/blob/master/index.Rmd" target="_blank" rel="noopener">
   Code
 </a>
 
@@ -759,7 +759,7 @@ Screenshot of the <em>Dependent</em> tab (<a href="https://github.com/pabloberna
 </div>
 <div id="code" class="section level3">
 <h3>Code</h3>
-<p>This web application was developed in <a href="https://www.r-project.org/about.html">R</a> (R Core Team, 2020). The code is <a href="https://github.com/pablobernabeu/Experimental-data-simulation/blob/master/web-application.Rmd">available on Github</a>, where contributions may be made. The initial code for this application was influenced by Section 5.7 (<a href="https://crumplab.github.io/programmingforpsych/simulating-and-analyzing-data-in-r.html#simulating-data-for-multi-factor-designs" target="_blank"><em>Simulating data for multi-factor designs</em></a>) in Crump (2017). The R packages used include Shiny (Chang, Cheng, Allaire, Xie, &amp; McPherson, 2020), Tidyverse (Wickham et al., 2019) and DT (Xie, 2020).</p>
+<p>This web application was developed in <a href="https://www.r-project.org/about.html">R</a> (R Core Team, 2020). The code is <a href="https://github.com/pablobernabeu/Experimental-data-simulation/blob/master/index.Rmd">available on Github</a>, where contributions may be made. The initial code for this application was influenced by Section 5.7 (<a href="https://crumplab.github.io/programmingforpsych/simulating-and-analyzing-data-in-r.html#simulating-data-for-multi-factor-designs" target="_blank"><em>Simulating data for multi-factor designs</em></a>) in Crump (2017). The R packages used include ‘dplyr’ (Wickham, François, Henry, &amp; Müller, 2018), ‘DT’ (Xie, 2020), ‘flexdashboard’ (Iannone, Allaire, &amp; Borges, 2020), ‘shiny’ (Chang, Cheng, Allaire, Xie, &amp; McPherson, 2020) and ‘stringr’ (Wickham, 2019).</p>
 </div>
 <div id="acknowledgements" class="section level3">
 <h3>Acknowledgements</h3>
@@ -770,8 +770,10 @@ Screenshot of the <em>Dependent</em> tab (<a href="https://github.com/pabloberna
 <div style="text-indent:-1.5em; margin-left:1.5em;">
 <p>Chang, W., Cheng, J., Allaire, J., Xie, Y., &amp; McPherson, J. (2020). shiny: Web Application Framework for R. R package version 1.4.0. Available at <a href="http://CRAN.R-project.org/package=shiny">http://CRAN.R-project.org/package=shiny</a>.</p>
 <p>Crump, M. J. C. (2017). Programming for Psychologists: Data Creation and Analysis (Version 1.1). <a href="https://crumplab.github.io/programmingforpsych/">https://crumplab.github.io/programmingforpsych/</a>.</p>
+<p>Iannone, R., Allaire, J. J., &amp; Borges, B. (2020). Flexdashboard: R Markdown Format for Flexible Dashboards. <a href="http://rmarkdown.rstudio.com/flexdashboard">http://rmarkdown.rstudio.com/flexdashboard</a>.</p>
 <p>R Core Team (2020). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria. URL <a href="https://www.R-project.org/">https://www.R-project.org/</a>.</p>
-<p>Wickham, H., Averick, M., Bryan, J., Chang, W., McGowan, L. D. A., François, R., … Kuhn, M. (2019). Welcome to the Tidyverse. <em>Journal of Open Source Software, 4</em>(43), 1686. <a href="https://doi.org/10.21105/joss.01686">https://doi.org/10.21105/joss.01686</a>.</p>
+<p>Wickham, H. (2019). stringr: Simple, Consistent Wrappers for Common String Operations. R package version 1.4.0. <a href="https://CRAN.R-project.org/package=stringr">https://CRAN.R-project.org/package=stringr</a>.</p>
+<p>Wickham, H., François, R., Henry, L., &amp; Müller, K. (2018). dplyr: A Grammar of Data Manipulation. R package version 0.7.6. <a href="https://CRAN.R-project.org/package=dplyr">https://CRAN.R-project.org/package=dplyr</a>.</p>
 <p>Xie, Y. (2020). DT: A Wrapper of the JavaScript Library “DataTables”. R package version 0.14. Available at <a href="https://CRAN.R-project.org/package=DT">https://CRAN.R-project.org/package=DT</a>.</p>
 </div>
 </div>
