--- a/index.html
+++ b/index.html
@@ -2697,7 +2697,7 @@
 </tr>
 </tbody>
 </table>
-<p>Besides this experience, I have a <a href="https://carpentries.org/become-instructor/">Carpentries Instructor certificate</a>, and I have run several <a href="https://pablobernabeu.github.io/#workshops">workshops and presentations</a>. Earlier, I taught English and Spanish to secondary-education students and adults.</p>
+<p>Besides this experience, I have a <a href="https://carpentries.org/become-instructor/">Carpentries Instructor certificate</a>, I have run several <a href="https://pablobernabeu.github.io/#workshops">workshops and presentations</a>, and earlier I <a href="https://osf.io/84ktq/">taught English to secondary-education students, and Spanish to adults</a>.</p>
 
     </div>
   
@@ -4936,13 +4936,13 @@
 <tr>
 <td>Nov 2020</td>
 <td>Talk</td>
-<td><a href="">Mixed-effects models in R, and a new tool for data simulation</a></td>
+<td><a href="./talk/mixed-effects-models-in-r-and-a-new-tool-for-data-simulation/">Mixed-effects models in R, and a new tool for data simulation</a></td>
 <td>New Tricks Seminars, Dept. Psychology, Lancaster University</td>
 </tr>
 <tr>
 <td>Oct 2020</td>
 <td>Talk</td>
-<td><a href="">Reproducibilidad en torno a una aplicación web</a></td>
+<td><a href="./talk/reproducibilidad-en-torno-a-una-aplicacion-web/">Reproducibilidad en torno a una aplicación web</a></td>
 <td>Reprohack en español, LatinR Conference 2020</td>
 </tr>
 <tr>
